# native_notes_pad

./: Cargo.toml  LICENSE  README.es.md  README.md  build.rs
.github/: FUNDING.yml
resources/: app.rc
src/: editor.rs  i18n.rs  main.rs  state.rs  ui.rs
src/locales/: en.json  es.json
